@@ -1,4 +1,6 @@
+DIST docopt-0.4.1.tar.gz 4846 SHA256 a3d558f66ae22ca771a6cdef48598541e352db6ee3258b286e40f39ff0f5dcb1 SHA512 64edfc0cc1f633a9a55cd2bee40349dea23b1d5636037bbc276dd8ae007dd8c55bb1698fb48c0afa48296d320af2e0c119f72aa35f9814d7c16ada9994f1a04c WHIRLPOOL 717f928bebe36407ec77a988d04d266a7ee91b8150c09a353e4dd26ecb5ecb12424e270a4981b17b18329ba7a9963e221023f9bda9ee72c6d20f73df35ad65f0
 DIST docopt-0.6.1.tar.gz 25815 SHA256 71ad940a773fbc23be6093e9476ad57b2ecec446946a28d30127501f3b29aa35 SHA512 8316a1fbd7253d2f7bed0baf07bc023d53b29e01abe69a1898a381c54321024e2f075567cc93488283a5125d7a82c32180f2a99ec07a9ec778e064c0a72e9cc1 WHIRLPOOL afa6dd3770904760b6352bf7a2f9c437df4212b28a65856986f3a28fb441dc2aecf1af5ef698e2f463df74c5087a4962fc56eee99d797aa172b7c766b5f22909
+EBUILD docopt-0.4.1.ebuild 418 SHA256 5efc4a936d68458b47e4789061193e7ea7831b9f6874e0b019847f9a10685017 SHA512 3b8d3297316a79122b1ca9fbb58b534ee91b4e95d59e1993c907e10b6995b5b0e3d74c3edfb860ae5d024d0db366ae46c19005eadc16a544eec0d3cba6f6e06f WHIRLPOOL 9e2c6ce5c6787a07e98c740e142f11e63ed688409dd52bb5c6b34c09bb7bac5fc5081862673fb57d4c480bc294eaa4c6b274f6cf2955d0133d1713aaa7872c20
 EBUILD docopt-0.6.1.ebuild 418 SHA256 5efc4a936d68458b47e4789061193e7ea7831b9f6874e0b019847f9a10685017 SHA512 3b8d3297316a79122b1ca9fbb58b534ee91b4e95d59e1993c907e10b6995b5b0e3d74c3edfb860ae5d024d0db366ae46c19005eadc16a544eec0d3cba6f6e06f WHIRLPOOL 9e2c6ce5c6787a07e98c740e142f11e63ed688409dd52bb5c6b34c09bb7bac5fc5081862673fb57d4c480bc294eaa4c6b274f6cf2955d0133d1713aaa7872c20
-MISC ChangeLog 157 SHA256 511eadb8d7a11c149cfe930dae92fb175d0acce572ec88ba4584f19c04d8dc7d SHA512 d545d56e5cf04f5cb1b68231f881f199b1835d3b0ee756751b862886c68cfd5f7febcc88e392029c81eac711c18a2132242c04fb76027ea40edb75a1eaf353cc WHIRLPOOL 43c618901456dea268b60a329009a2b758c72af320ec77badb3305e2cf19cafbcb826fee8704908ff2effa6e579347f1c4dd48f33a381af4c1836756a923ad98
+MISC ChangeLog 326 SHA256 6307dd46ee46a42257ac3339e7f1ca8a89f3dfdc37da5fdd153e07910a5c1d47 SHA512 fd9991f59fce03bdc9766dcf524754d7b58a620f613a1105d384cf4976f09c4eebe5d3530362cf17af5f435f9fc241e0c19de2bb2bc3454d3deb31ba51f31f91 WHIRLPOOL 096706570eea775091452e662058d2b226c88f6aabbda7492f457b33520ed9681e9f7ec1b4f6809f76fb139fe6d046ea297269a177a866c9a63d61a48ce2d918
 MISC metadata.xml 237 SHA256 7aebf1a287d9d2d4fa5b66af4c801da2083b6bc7d3cd077c235869ade1fb960d SHA512 e9249ef4ab11f8463a54b559634717a35dcd23da7e4d233feb223f3db7847e0638a5a3c89fb23a05c567251dde2e796c2ce3cd1efd57ff1a513c6fe55f9978a8 WHIRLPOOL 01e3ce0b931af3ce0389559235d360f5278067cb93376de4bf06a4e640fe54619595ebde1b8c811b64cb2a3aeab2b61ed54052f6e33de9470342c4cd27ddd443
