@@ -1,3 +1,8 @@
+*docopt-0.4.1 (10 Feb 2013)
+
+  10 Feb 2013; Manuel Rueger (mrueg) gentoo@rueg.eu +docopt-0.4.1.ebuild:
+  dev-python/docopt: Add outdated version, needed by onkyo-eiscp
+
 *docopt-0.6.1 (10 Feb 2013)
 
   10 Feb 2013; Manuel Rueger (mrueg) gentoo@rueg.eu +docopt-0.6.1.ebuild,
